<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "#00FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center|end"
        android:hint="0"
        android:maxLength="14"
        android:padding="10dp"
        android:textColor="@color/colorTextonPrimary"
        android:textColorHint="@color/colorTextonSecondary"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/sign"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|end"
        android:padding="10dp"
        android:textColor="@color/colorTextonPrimary"
        android:textColorHint="@color/colorTextonSecondary"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnClick_7"
            android:text="@string/seven"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp"
            tools:ignore="NestedWeights" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnClick_8"
            android:text="@string/eight"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnClick_9"
            android:text="@string/nine"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnClick_add"
            android:text="@string/plus"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="30sp" />

        <ImageButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnClick_delete"
            android:src="@drawable/ic_backspace_black_24dp"
            android:contentDescription="@string/delete" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnClick_4"
            android:text="@string/four"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp"
            tools:ignore="NestedWeights" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnClick_5"
            android:text="@string/five"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnClick_6"
            android:text="@string/six"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnClick_subtract"
            android:text="@string/minus"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="30sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnClick_clear"
            android:text="@string/clear"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnClick_1"
            android:text="@string/one"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp"
            tools:ignore="NestedWeights" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnClick_2"
            android:text="@string/two"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnClick_3"
            android:text="@string/three"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnClick_multiply"
            android:text="@string/multiply"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="30sp" />

        <ImageButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_camera"
            android:contentDescription="@string/camera" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageButton
            android:id="@+id/history"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_history_btn" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnClick_0"
            android:text="@string/zero"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnClick_dot"
            android:text="@string/dot"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnClick_divide"
            android:text="@string/divide"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="30sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnClick_equal"
            android:text="@string/equal"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="30sp" />

    </LinearLayout>
</LinearLayout>
